--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-player": "^2.10.0",
     "react-query": "^3.34.20",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
