--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.27",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
+    "@types/styled-components": "^5.1.25",
     "framer-motion": "^6.3.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
